@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-11-?
+DATE: 02/14/2018
+STAFF: lec
+CHANGES:
+1) TR12777/new WF_SupplementalData.py
+
 TAG: qcreports_db-6-0-11-27
 DATE: 01/19/2018
 STAFF: dbm
